Move from JPA to JDBC